--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1108,7 +1108,7 @@ financebench_id_06272:
   evaluator-unreliable: true
 
 
-financebench_id_10130:
+financebench_id_10130:  # TODO: retrieve Payables & COGS
   doc: CORNING_2020_10K
   question: 'Based on the information provided primarily in the balance sheet and
     the statement of income, what is FY2020 days payable outstanding (DPO) for Corning?
