add comment to financebench_id_04458 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1604,7 +1604,7 @@ financebench_id_00552:
   answer-inadequate: true
 
 
-financebench_id_04458:
+financebench_id_04458:  # TODO: retrieve Depreciation & Amortization of Property, Equipment and Intangibles
   doc: NETFLIX_2015_10K
   question: 'We want to calculate a financial metric. Please help us compute it by
     basing your answers off of the statement of income and the statement of cash flows.
