--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1354,7 +1354,7 @@ financebench_id_10136:
     (if the answer is a single number, assume that it is that calculated Retention Ratio metric value)
 
 
-financebench_id_00299:
+financebench_id_00299:  # TODO: there seems to be confusion b/w Corporate & Investment Bank vs. CORPORATE segments
   doc: JPMORGAN_2021Q1_10Q
   question: Which of JPM's business segments had the lowest net revenue in 2021 Q1?
   answer: Corporate. Its net revenue was -$473 million.
