--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -2047,7 +2047,7 @@ financebench_id_00859:
     the answer identifies Cross Currency Swaps as having highest notional value
 
 
-financebench_id_02024:
+financebench_id_02024:  # TODO: numbers for different years often mixed up
   doc: VERIZON_2021_10K
   question: As of FY 2021, how much did Verizon expect to pay for its retirees in
     2024?
