--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ maintainers = [
   "Aitomatic, Inc. <engineering@aitomatic.com>",
   "Vinh Luong <vinh@aitomatic.com>",
   "Sang Dinh <sang@aitomatic.com>",
+  "Quynh Le <quynh@aitomatic.com>",
+  "Zooey Nguyen <zooey@aitomatic.com>",
+  "Shruti Raghavan <shruti@aitomatic.com>",
   "Chanh Le <chanh@aitomatic.com>",
 ]
 
