add solve all combination in makefile

--- a/examples/FinanceBench/Makefile
+++ b/examples/FinanceBench/Makefile
@@ -26,6 +26,15 @@ htp-expert-static-oodar-w-knowledge-solve:
 htp-expert-dynamic-oodar-w-knowledge-solve:
 	@poetry run python htp_oodar_agent.py ${id} --knowledge --expert-plan --dynamic-exec
 
+htp-all-combination-solve:
+	@poetry run python htp_oodar_agent.py ${id}
+	@poetry run python htp_oodar_agent.py ${id} --dynamic-exec
+	@poetry run python htp_oodar_agent.py ${id} --expert-plan
+	# @poetry run python htp_oodar_agent.py ${id} --expert-plan --dynamic-exec
+	@poetry run python htp_oodar_agent.py ${id} --knowledge
+	@poetry run python htp_oodar_agent.py ${id} --knowledge --dynamic-exec
+	@poetry run python htp_oodar_agent.py ${id} --knowledge --expert-plan
+	# @poetry run python htp_oodar_agent.py ${id} --knowledge --expert-plan --dynamic-exec
 
 ooda-solve:
 	@poetry run python ooda.py ${id}
