--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1336,6 +1336,8 @@ financebench_id_04854:
     3200, 3200 million or 3.2 billion
     (if the answer is a single number, assume that it is that calculated Free Cash Flows (FCF) metric value)
 
+  evaluator-unreliable: true
+
 
 financebench_id_10136:
   doc: GENERALMILLS_2022_10K
