update financebench_id_00917 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -585,7 +585,7 @@ financebench_id_00917:
 
   category: 0-RETRIEVE
   correctness: >-
-    the answer mentions amortization of intangible assets associated with Xilinx acquisition
+    the answer mentions Xilinx
 
 
 financebench_id_01279:
