--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1158,7 +1158,7 @@ financebench_id_01346:
   category: 2-CALC-CHANGE
   correctness: >-
     the answer says that Effective Tax Rate changed from approximately 20% to approximately 23%,
-    and/or that it increased by 3 percentage points
+    and/or that it increased by approximately 3 percentage points
 
   evaluator-unreliable: true
 
