update financebench_id_00839 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1270,7 +1270,7 @@ financebench_id_00839:
 
   category: 0-RETRIEVE
   correctness: >-
-    the answer affirms that and mentions Ulta Beauty
+    the answer affirms that Dillon has got experience in relevant and similar organizations and roles
 
   evaluator-unreliable: true
 
