update examples/FinanceBench/Makefile htp-oodar-all-combo-solve target

--- a/examples/FinanceBench/Makefile
+++ b/examples/FinanceBench/Makefile
@@ -30,11 +30,11 @@ htp-oodar-all-combo-solve:
 	@poetry run python htp_oodar_agent.py ${id}
 	@poetry run python htp_oodar_agent.py ${id} --dynamic-exec
 	@poetry run python htp_oodar_agent.py ${id} --expert-plan
-	# @poetry run python htp_oodar_agent.py ${id} --expert-plan --dynamic-exec
+	@poetry run python htp_oodar_agent.py ${id} --expert-plan --dynamic-exec
 	@poetry run python htp_oodar_agent.py ${id} --knowledge
 	@poetry run python htp_oodar_agent.py ${id} --knowledge --dynamic-exec
 	@poetry run python htp_oodar_agent.py ${id} --knowledge --expert-plan
-	# @poetry run python htp_oodar_agent.py ${id} --knowledge --expert-plan --dynamic-exec
+	@poetry run python htp_oodar_agent.py ${id} --knowledge --expert-plan --dynamic-exec
 
 
 ooda-solve:
