--- a/pyproject.toml
+++ b/pyproject.toml
@@ -103,6 +103,7 @@ llama-index-callbacks-wandb = {version = ">=0.1", optional = true}
 streamlit = {version = ">=1.35", optional = true}
 streamlit-extras = {version = ">=0.4", optional = true}
 streamlit-mic-recorder = {version = ">=0.0.8", optional = true}
+pdfkit = "^1.0.0"
 
 [tool.poetry.extras]
 contrib = [
