mark financebench_id_00807 as verified

--- a/examples/FinanceBench/expert-plan-map.yml
+++ b/examples/FinanceBench/expert-plan-map.yml
@@ -1,5 +1,5 @@
 financebench_id_00499: cap-intens
-financebench_id_00807: quick-ratio  #
+financebench_id_00807: quick-ratio
 financebench_id_02987: fa-turnover-ratio  #
 financebench_id_07966: capex-as-pct-of-rev-3y-avg  #
 financebench_id_04735: op-cf-ratio  #
