--- a/examples/FinanceBench/expert-plan-map.yml
+++ b/examples/FinanceBench/expert-plan-map.yml
@@ -5,7 +5,7 @@ financebench_id_07966: capex-as-pct-of-rev-3y-avg
 financebench_id_04735: op-cf-ratio
 financebench_id_03856: op-cf-ratio
 financebench_id_00438: op-margin-comp
-financebench_id_00591: fcf-conv-comp  #
+financebench_id_00591: fcf-conv-comp
 financebench_id_00540: inv-turnover-ratio  #
 financebench_id_10420: roa  #
 financebench_id_06655: days-payable-outstanding
