mark financebench_id_04254 as verified

--- a/examples/FinanceBench/expert-plan-map.yml
+++ b/examples/FinanceBench/expert-plan-map.yml
@@ -13,7 +13,7 @@ financebench_id_00799: quick-ratio-comp  #
 financebench_id_00684: gross-margin-comp
 financebench_id_03069: da-margin
 financebench_id_00222: quick-ratio
-financebench_id_04254: ebitda  #
+financebench_id_04254: ebitda
 financebench_id_00070: net-work-cap  #
 financebench_id_02608: net-margin-3y-avg
 financebench_id_00685: gross-margin-comp  #
