--- a/examples/FinanceBench/expert-plan-map.yml
+++ b/examples/FinanceBench/expert-plan-map.yml
@@ -16,7 +16,7 @@ financebench_id_00222: quick-ratio
 financebench_id_04254: ebitda
 financebench_id_00070: net-work-cap
 financebench_id_02608: net-margin-3y-avg
-financebench_id_00685: gross-margin-comp  #
+financebench_id_00685: gross-margin-comp
 financebench_id_04660: work-cap-ratio  #
 financebench_id_00678: gross-margin-comp
 financebench_id_00585: effective-tax-rate-comp  #
