--- a/examples/FinanceBench/expert-plan-map.yml
+++ b/examples/FinanceBench/expert-plan-map.yml
@@ -25,7 +25,7 @@ financebench_id_09724: cogs-margin
 financebench_id_06272: div-payout-ratio
 financebench_id_10130: days-payable-outstanding  #
 financebench_id_02981: op-margin-3y-avg
-financebench_id_00005: net-work-cap  #
+financebench_id_00005: net-work-cap
 financebench_id_05915: fa-turnover-ratio
 financebench_id_00790: cap-intens  #
 financebench_id_04103: cash-conv-cyc  #
