mark financebench_id_00790 as verified

--- a/examples/FinanceBench/expert-plan-map.yml
+++ b/examples/FinanceBench/expert-plan-map.yml
@@ -27,7 +27,7 @@ financebench_id_10130: days-payable-outstanding  #
 financebench_id_02981: op-margin-3y-avg
 financebench_id_00005: net-work-cap
 financebench_id_05915: fa-turnover-ratio
-financebench_id_00790: cap-intens  #
+financebench_id_00790: cap-intens
 financebench_id_04103: cash-conv-cyc  #
 financebench_id_03471: work-cap-ratio  #
 financebench_id_04854: fcf  #
