--- a/examples/FinanceBench/expert-plan-map.yml
+++ b/examples/FinanceBench/expert-plan-map.yml
@@ -28,7 +28,7 @@ financebench_id_02981: op-margin-3y-avg
 financebench_id_00005: net-work-cap
 financebench_id_05915: fa-turnover-ratio
 financebench_id_00790: cap-intens
-financebench_id_04103: cash-conv-cyc  #
+financebench_id_04103: cash-conv-cyc
 financebench_id_03471: work-cap-ratio  #
 financebench_id_04854: fcf  #
 financebench_id_10136: retention-ratio  #
