mark financebench_id_04481 as verified

--- a/examples/FinanceBench/expert-plan-map.yml
+++ b/examples/FinanceBench/expert-plan-map.yml
@@ -43,7 +43,7 @@ financebench_id_04302: cogs-margin-3y-avg
 financebench_id_04080: inv-turnover-ratio
 financebench_id_00080: net-work-cap
 financebench_id_03620: ebitda
-financebench_id_04481: ebitda-margin  #
+financebench_id_04481: ebitda-margin
 financebench_id_00216: quick-ratio  #
 financebench_id_00215: cap-intens  #
 financebench_id_06247: days-payable-outstanding  #
