--- a/examples/FinanceBench/expert-plan-map.yml
+++ b/examples/FinanceBench/expert-plan-map.yml
@@ -47,5 +47,5 @@ financebench_id_04481: ebitda-margin
 financebench_id_00216: quick-ratio
 financebench_id_00215: cap-intens
 financebench_id_06247: days-payable-outstanding
-financebench_id_04784: op-margin-comp  #
+financebench_id_04784: op-margin-comp
 financebench_id_06741: ebitda-margin-3y-avg  #
